--- a/docs/style.css
+++ b/docs/style.css
@@ -1,22 +1,56 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap");
+*, *:after, *:before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Noto Sans JP", sans-serif;
-  color: #41584b;
-  background-color: #ffe0d8;
+  color: #512F3B;
+  background-color: white;
 }
 
 main {
   margin: 50px 150px;
+}
+@media screen and (max-width: 767px) {
+  main {
+    margin: 20px 10px;
+  }
+}
+@media screen and (min-width: 768px) {
+  main {
+    margin: 50px 50px;
+  }
+}
+@media screen and (min-width: 1025px) {
+  main {
+    margin: 50px 150px;
+  }
 }
 
 .logo {
   width: 100%;
 }
 
+.description {
+  margin: 24px 0 0 0;
+}
+.description p {
+  margin: 0.5rem 0 0 0;
+}
+
+.control-panel {
+  margin: 12px 0 0 0;
+  display: flex;
+  align-items: stretch;
+}
+
 .randomize-btn {
-  margin: 20px 0 0 0;
+  padding: 5px 10px;
   font-family: "Noto Sans JP", sans-serif;
-  background-color: #ff9b93;
+  background-color: #512F3B;
   color: white;
   font-weight: bold;
   outline: none;
@@ -25,18 +59,73 @@ main {
   font-size: 1em;
 }
 
+.select-preset {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 100px;
+}
+.select-preset::after {
+  position: absolute;
+  top: 30%;
+  right: 15px;
+  width: 10px;
+  height: 10px;
+  border-top: 3px solid #512F3B;
+  border-right: 3px solid #512F3B;
+  -webkit-transform: rotate(135deg);
+  transform: rotate(135deg);
+  pointer-events: none;
+  content: "";
+}
+.select-preset select {
+  height: 100%;
+  appearance: none;
+  margin: 0 0 0 10px;
+  padding: 0 0 0 10px;
+  display: block;
+  font-size: 0.9rem;
+  font-family: "Noto Sans JP", sans-serif;
+}
+
+.input-file-wrap {
+  display: flex;
+  align-items: center;
+  margin: 0 0 0 10px;
+  padding: 0 8px;
+  cursor: pointer;
+  border: 1.5px solid #512F3B;
+  border-radius: 4px;
+}
+
+.input-file {
+  display: none;
+}
+
 .random-words {
-  background-color: white;
   padding: 10px 15px;
-  border: 2px dashed #ccc;
-  margin-top: 20px;
+  border: 2px dashed #512F3B;
+  margin: 24px 0 0 0;
 }
-.random-words table {
-  width: 100%;
+.random-words ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-rows: 1fr;
 }
-.random-words table td {
-  padding: 20px 0;
-  text-align: center;
+@media screen and (max-width: 767px) {
+  .random-words ul {
+    grid-template-columns: 1fr;
+  }
+}
+@media screen and (min-width: 768px) {
+  .random-words ul {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (min-width: 1025px) {
+  .random-words ul {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
